feat: сверстать категории

--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -4,4 +4,7 @@
   padding: 20px 30px;
   display: flex;
   justify-content: space-between;
+  background-color: white;
+  position: fixed;
+  z-index: 5;
 }
