--- a/src/blocks/header/__theme-switch/header__theme-switch.css
+++ b/src/blocks/header/__theme-switch/header__theme-switch.css
@@ -1,2 +1,15 @@
 .header__theme-switch {
+  width: 20px;
+  height: 20px;
+  background: transparent;
+  outline: none;
+  border: none;
+  background-image: url('../../../images/day_icon.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.header__theme-switch:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
