--- a/src/blocks/category/__header/category__header.css
+++ b/src/blocks/category/__header/category__header.css
@@ -3,6 +3,7 @@
   font-family: 'Inter', 'Arial', sans-serif;
   font-size: 18px;
   font-weight: 500;
-  padding-bottom: 20px;
+  padding: 100px 0 40px;
   text-align: center;
+  display: block;
 }
