--- a/src/blocks/item/__bttm-panel/item__bttm-panel.css
+++ b/src/blocks/item/__bttm-panel/item__bttm-panel.css
@@ -1,6 +1,6 @@
 .item__bttm-panel {
   box-sizing: border-box;
-  padding: 10px;
+  padding: 15px 10px;
   display: flex;
   gap: 10px;
   max-width: 100%;
