feat: настроить открытие формы

--- a/src/blocks/buy-form/buy-form.css
+++ b/src/blocks/buy-form/buy-form.css
@@ -8,10 +8,15 @@
   right: 0;
   padding-left: 19px;
   padding-right: 19px;
-  /*   visibility: hidden;
-  opacity: 0; */
+  visibility: hidden;
+  opacity: 0;
   transition: visibility 0.3s, opacity 0.3s linear;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.buy-form.open {
+  visibility: visible;
+  opacity: 1;
 }
