--- a/src/blocks/category/__item/category__item.css
+++ b/src/blocks/category/__item/category__item.css
@@ -6,3 +6,7 @@
   border-radius: 10px;
   filter: drop-shadow(0px 40px 80px rgba(0, 0, 0, 0.05));
 }
+
+.category__item.dark-theme {
+  background-color: black;
+}
