--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,11 @@
 @import url('./blocks/buy-form/__item-name/buy-form__item-name.css');
 @import url('./blocks/buy-form/__label/buy-form__label.css');
 @import url('./blocks/buy-form/__submit-button/buy-form__submit-button.css');
+
+/* блок категорий */
+
+@import url('./blocks/categories/categories.css');
+@import url('./blocks/categories/__category/categories__category.css');
+@import url('./blocks/categories/__container/categories__container.css');
+@import url('./blocks/categories/__header/categories__header.css');
+@import url('./blocks/categories/__item/categories__item.css');
