--- a/src/blocks/header/__nav-link/header__nav-link.css
+++ b/src/blocks/header/__nav-link/header__nav-link.css
@@ -12,3 +12,9 @@
 .header__nav-link.dark-theme {
   color: white;
 }
+
+@media screen and (max-width: 500px) {
+  .header__nav-link {
+    font-size: 12px;
+  }
+}
