--- a/src/blocks/header/__nav-list/header__nav-list.css
+++ b/src/blocks/header/__nav-list/header__nav-list.css
@@ -7,6 +7,16 @@
   display: flex;
   gap: 40px;
   justify-content: center;
-  /*  width: 70%;
-  justify-content: space-between; */
+}
+
+@media screen and (max-width: 500px) {
+  .header__nav-list {
+    gap: 20px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .header__nav-list {
+    gap: 10px;
+  }
 }
